Kubernetes/5-service copy.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: myapp-service
  labels:
    name: myapp-service
spec:
  containers:
    - name: nginx-container
      image: nginx
