Kubernetes/5-service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: myapp-service
  labels:
    name: myapp-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
  selector:
    app: myapp
    type: front-end
