Kubernetes/7-service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - targetPort: 10
      port: 10
  selector:
    app: myapp
    name: backedn
